<resources>
    <string name="app_name">Contado O Cuotas</string>
    <string name="contado_o_cuotas">¿Contado o cuotas?</string>
    <string name="qu_te_conviene">¿Qué te conviene?</string>
    <string name="border_edittext">border edittext</string>
    <string name="precio_en_contado">Precio en contado</string>
    <string name="precio_en_cuotas">Precio en cuotas</string>
    <string name="calcular">CALCULAR</string>
    <string name="textview">TextView</string>
    <string name="volver">Volver</string>
    <string name="test">test</string>
    <string name="precioencuotas">Precio en cuotas</string>
    <string name="cargando_inflaci_n_actual">Cargando Inflación actual...</string>

</resources>